--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -24,9 +24,14 @@
   weight = 40
 
 [[main]]
+  name = "Services"
+  url = "#services"
+  weight = 60
+
+[[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 80
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
