--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -282,8 +282,8 @@ plugins_js  = []
 ## Marketing
 ############################
 [marketing]
-  google_analytics = ""
-  google_tag_manager = ""
+  google_analytics = "https://www.googletagmanager.com/gtag/js?id=UA-10735492-2"
+  google_tag_manager = "UA-10735492-2"
 
 ############################
 ## Content Management System
