--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -29,6 +29,11 @@
   weight = 60
 
 [[main]]
+  name = "Courses"
+  url = "courses/"
+  weight = 80
+
+[[main]]
   name = "Contact"
   url = "#contact"
   weight = 100
