--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -29,8 +29,8 @@
   weight = 60
 
 [[main]]
-  name = "Courses"
-  url = "courses/"
+  name = "Teaching"
+  url = "teaching/"
   weight = 80
 
 [[main]]
