--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -14,14 +14,14 @@
   weight = 20
 
 [[main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 30
-
-[[main]]
   name = "Publications"
   url = "#featured"
-  weight = 40
+  weight = 30
+
+[main]]
+  name = "Projects"
+  url = "projects/"
+  weight = 30
 
 [[main]]
   name = "Services"
