--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -18,20 +18,20 @@
   url = "#featured"
   weight = 30
 
-[[main]]
-  name = "Projects"
-  url = "projects/"
-  weight = 40
+#[[main]]
+#  name = "Projects"
+#  url = "projects/"
+#  weight = 40
 
 [[main]]
   name = "Services"
   url = "services/"
   weight = 60
 
-[[main]]
-  name = "Teaching"
-  url = "teaching/"
-  weight = 80
+#[[main]]
+#  name = "Teaching"
+#  url = "teaching/"
+#  weight = 80
 
 [[main]]
   name = "Contact"
