--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -23,15 +23,21 @@
 #  url = "projects/"
 #  weight = 40
 
+
+[[main]]
+  name = "Teaching"
+  url = "teaching/"
+  weight = 40
+
 [[main]]
   name = "Services"
   url = "services/"
   weight = 60
 
 [[main]]
-  name = "Teaching"
-  url = "teaching/"
-  weight = 40
+    name = "People"
+    url = "#people"
+    weight = 80
 
 [[main]]
   name = "Contact"
