--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -35,8 +35,8 @@
   weight = 60
 
 [[main]]
-    name = "Group"
-    url = "group/"
+    name = "Team"
+    url = "team/"
     weight = 80
 
 [[main]]
