--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -23,11 +23,15 @@
 #  url = "projects/"
 #  weight = 40
 
+[[main]]
+  name = "Research"
+  url = "research/"
+  weight = 40
 
 [[main]]
   name = "Teaching"
   url = "teaching/"
-  weight = 40
+  weight = 50
 
 [[main]]
   name = "Services"
