--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "themes_1/academic"]
-	path = themes_1/academic
-	url = https://github.com/songdj/songdj.github.io.git
+[submodule "themes/academic"]
+	path = themes/academic
+	url = https://github.com/gcushen/hugo-academic.git
 [submodule "public"]
 	path = public
 	url = https://github.com/songdj/songdj.github.io.git
