--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
+[submodule "themes_1/academic"]
+        url = https://github.com/songdj/songdj.github.io.git
 [submodule "public"]
 	path = public
 	url = https://github.com/songdj/songdj.github.io.git
